src/objects/TPA_Request__c.object
<CustomObject>
    <fields>
        <fullName>Data_Medium__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Data Medium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excel</fullName>
                </value>
                <value>
                    <fullName>CSV</fullName>
                </value>
                <value>
                    <fullName>PowerPoint</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Flat File</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Period_End_Date__c</fullName>
        <label>Data Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Period_Start_Date__c</fullName>
        <label>Data Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Provided_By__c</fullName>
        <label>Data Provided to Service Provider by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>IMS in lieu of Client</fullName>
                </value>
                <value>
                    <fullName>Primary Vendor in lieu of Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Data_Asset_Owner_Approves_Initial__c</fullName>
        <description>Updated (once) when the data asset owner accepts / reject a TPA initially</description>
        <label>Date Data Asset Owner Approves Initial</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Data_Asset_Owner_Approves_Recent__c</fullName>
        <description>Updated  when the data asset owner accepts / reject a TPA - most recent event</description>
        <label>Date Data Asset Owner Approves Recent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Data_Asset_Owner_Notified_Initial__c</fullName>
        <description>Updated  (once) when the data asset owner has been notified to review a request - initially</description>
        <label>Date Data Asset Owner Notified Initial</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Data_Asset_Owner_Notified_Recent__c</fullName>
        <description>Updated when the data asset owner has been notified to review a request - most recent event</description>
        <label>Date Data Asset Owner Notified Recent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_IMS_Approval_for_Contract_Creation__c</fullName>
        <description>Data / time when ready for Contract Creation (i.e. goes into the Contract queue)</description>
        <label>Date IMS Approval for Contract Creation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_IMS_Contract_Creation__c</fullName>
        <description>Date / Time of Contract Creation</description>
        <label>Date IMS Contract Creation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_IMS_Receipt_Initial__c</fullName>
        <description>Updated  (once) when the IMS Alliance takes it from the incoming queue - Initially</description>
        <label>Date IMS Receipt Initial</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_IMS_Receipt_Recent__c</fullName>
        <description>Updated when the IMS Alliance takes it from the incoming queue - most recent event</description>
        <label>Date IMS Receipt Recent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Signed__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Date Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_By_Initiator__c</fullName>
        <description>Updated when the Initiator hits the &quot;Send for Completion&quot; Button</description>
        <label>Date Submitted By Initiator</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_By_Provider_Initial__c</fullName>
        <description>Updated (once) when the person completing the TPA form hits the &quot;Send for Acknowledgement Button - initially</description>
        <label>Date Submitted By Provider Initial</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_By_Provider_Recent__c</fullName>
        <description>Updated with the most recent date / time when the person completing the TPA form hits the &quot;Send for Acknowledgement Button - most recent event</description>
        <label>Date Submitted By Provider Recent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_To_IMS_Initial__c</fullName>
        <description>Updated  (once) when the Comfirming person submits for processing by IMS - Initially</description>
        <label>Date Submitted To IMS Initial</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_To_IMS_Recent__c</fullName>
        <description>Updated with the most recent dated / time when the Comfirming person submits for processing by IMS - most recent event</description>
        <label>Date Submitted To IMS Recent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_since_TLLA_has_expired__c</fullName>
        <formula>if(TODAY()  -  Data_Access_End_Date__c &gt; 0, TODAY()  -  Data_Access_End_Date__c, 0)</formula>
        <label>Days since TLLA has expired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Code__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Diagnosis Code</label>
        <length>43</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diff_Created_and_Signed__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <formula>IF((DateValue(Sent_for_Signatures_on__c) - DateValue(CreatedDate))&lt;0,0,DateValue(Sent_for_Signatures_on__c) - DateValue(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created and Sent for Sign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_Signed_and_Activated__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <formula>IF((DateValue(In_Effect_Date__c) - DateValue(Sent_for_Signature__c))&lt;0,0,DateValue(In_Effect_Date__c) - DateValue(Sent_for_Signature__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sent for sign and Activated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Docusign_Custom_Picklist__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Docusign Custom Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Docusign_Custom_Textbox__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Docusign Custom Textbox</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_the_request_require_information_con__c</fullName>
        <description>Created by Ranu ER-905</description>
        <label>Does require IMS Reference Files?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please select from the below</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Early_Contract_Expiry_Date__c</fullName>
        <description>Created under ER - 3126</description>
        <label>Early Contract Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Early_Expiry_Acknowledgement_Date__c</fullName>
        <label>Early Expiry Acknowledgement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Early_Expiry_Requestor_Email__c</fullName>
        <label>Early Expiry Requestor Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Early_Expiry_Requestor_Name__c</fullName>
        <description>Early Expiry Form Acknowledged by</description>
        <label>Early Expiry Requestor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Early_Expiry_Requestor_Title__c</fullName>
        <label>Early Expiry Requestor Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employ_SubContractors_VendorResponse__c</fullName>
        <label>Employ SubContractors VendorResponse</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employ_SubContractors__c</fullName>
        <label>Employ sub-contractors?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Accessing_Data_Location_Values__c</fullName>
        <label>Employee Accessing Data Location Values</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Accessing_Data_Location__c</fullName>
        <label>Employee Accessing Data Location</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exhibit_Page_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will only be checked if the TPA has an Ad-hoc Additional Term that requires an Exhibit / Schedule Page that necessitates displaying a comprehensive list or table of permitted fields that can be shared.</inlineHelpText>
        <label>TPA has Ad-Hoc Exhibit/Schedule Page(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_to_Client_Submission_Delay__c</fullName>
        <formula>Client_Request_Submission__c - Parent_Request__r.Expired_Date__c</formula>
        <label>Expiration to Client Submission Delay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expired_Date__c</fullName>
        <label>Expired Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expired__c</fullName>
        <formula>HYPERLINK(&quot;https://iqvia.my.site.com/imshealthPortal/List_View?Id=&quot;&amp;Id&amp;&quot;&amp;name=View&quot;, &quot;View&quot;,&quot;_self&quot;)&amp;IF( AND(Data_Access_End_Date__c&gt;=TODAY(), Data_Access_End_Date__c&lt;TODAY()+30) ,&quot; | &quot;&amp;HYPERLINK(&quot;https://iqvia.my.site.com/imshealthPortal/List_View?Id=&quot;&amp;Id&amp;&quot;&amp;name=renew&quot;, &quot;Renew&quot;,&quot;_self&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expired</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_License_Data_Supplier_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External License/Data Supplier Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Files_Encrypted__c</fullName>
        <label>Files Encrypted?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please select from the below</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FrequencyOfDeliveryToSP_Other__c</fullName>
        <label>FrequencyOfDeliveryToSP_Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FrequencyOfDeliveryToServiceProvider__c</fullName>
        <label>FrequencyOfDeliveryToServiceProvider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-time</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Once per each 90-day project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency_Of_Delivery_Vendor_Localized__c</fullName>
        <label>Frequency Of Delivery Vendor Localized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_Of_Delivery__c</fullName>
        <inlineHelpText>Describe how often each requested IQVIA data assets will be delivered to the Service provider.</inlineHelpText>
        <label>Frequency Of Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-Time</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Once per each 90 day project</fullName>
                </value>
                <value>
                    <fullName>Ad-hoc</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency_of_Delivery_Other__c</fullName>
        <label>Frequency of Delivery Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_AMA_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AMA contract generation via system</description>
        <label>Generate AMA Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Supporting_Document__c</fullName>
        <formula>IF(OR($Profile.Name=&apos;Alliance TPA Processing&apos;,CONTAINS($Profile.Name, &apos;System Administrator&apos;),$Profile.Name=&apos;Alliance TPA Processing Platform&apos;), HYPERLINK(&quot;/apex/VFP_TPA_SelectTemplate?id=&quot;&amp;Id &amp;&quot;&amp;templateType=TPA_Request__c&amp;templateKeyword=AMA Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_GenerateSupportingDocument&quot;, &quot;Generate&quot;), &quot;_self&quot;), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Supporting Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_TLLA__c</fullName>
        <description>Used to generate TLLA document.</description>
        <formula>HYPERLINK(&quot;/apex/VFP_TPA_SelectTemplate?id=&quot;&amp;Id &amp; &quot;&amp;templateType=TPA_Request__c&amp;templateKeyword=TPA Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate TLLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_TPSA__c</fullName>
        <description>Button to generate TPSA Documents</description>
        <formula>IF( AND( NOT( ISPICKVAL(Request_Status__c , &quot;Awaiting Vendor Submission&quot;)), NOT( ISPICKVAL(Request_Status__c, &quot;Draft&quot;))), HYPERLINK(&quot;/apex/VFP_TPA_ValidateUseDefDocType?id=&quot; &amp; Id &amp; &quot;&amp;CUDDType=&quot; &amp; IF(Check_Use_Definition_Extension__c &lt;&gt; False, &apos;true&apos;,&apos;false&apos;) &amp; &quot;&amp;isPopUp=show&quot;, IMAGE(&quot;/resource/tpaGenerateTPSA&quot;, &quot;Generate TPSA&quot;), &quot;_self&quot;) , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate TP Tech Lic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Brand_Company_Name__c</fullName>
        <label>Global Brand Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Branding_Vendor_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Branding Vendor Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>TPA Requests (Global Branding Vendor Address)</relationshipLabel>
        <relationshipName>TPA_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_Vendor_Name__c</fullName>
        <formula>IF(OR(ISNULL(Service_Provider_Address__r.Parent_Vendor_Name__c),ISBLANK(Service_Provider_Address__r.Parent_Vendor_Name__c)),Service_Provider_Address__r.Name, Service_Provider_Address__r.Parent_Vendor_Name__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Vendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCEID__c</fullName>
        <description>Created by Ranu ER-905</description>
        <label>HCEID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please select from the below</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCOS_Class_of_Trade_COT__c</fullName>
        <description>Created by Ranu ER-905</description>
        <label>HCOS Class of Trade (COT)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please select from the below</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCPS_Address_Intelligence_rankings_flags__c</fullName>
        <description>Created by Ranu ER-905</description>
        <label>HCPS Address Intelligence rankings/flags</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please select from the below</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Client_Purchased_IMS_Requested_Data__c</fullName>
        <label>Has Client Purchased IMS Requested Data</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please select from the below</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_IMS_AG_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Has IMS AG Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_MIDAS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Has MIDAS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Restricted_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Has Restricted Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Use_Definition_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Has Use Definition Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Xponent_Plantrak__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Has Xponent Plantrak</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Helpful_Hints_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TPA-MC-ESPSFDCTPA-1877: Check whether the Vendor does acknowledge the Helpful Hints Addendum.</description>
        <label>Helpful Hints Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_Response_Data_Collected_For_Template__c</fullName>
        <label>How Response Data Collected For Template</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IMSSoftware__c</fullName>
        <label>IMS Software</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data View</fullName>
                </value>
                <value>
                    <fullName>IMS File Express</fullName>
                </value>
                <value>
                    <fullName>IMS Portal</fullName>
                </value>
                <value>
                    <fullName>MVP</fullName>
                </value>
                <value>
                    <fullName>PADDS</fullName>
                </value>
                <value>
                    <fullName>SMART</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMS_Data_Country_Location_Values__c</fullName>
        <label>IMS Data Country Location Values</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IMS_Data_Country_Location__c</fullName>
        <label>IMS Data Country Location</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMS_Data_Country__c</fullName>
        <label>IMS Data Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>